--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
     <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
+          <!-- <a href="{{ site.baseurl }}" title="Home">{{ site.title }}</a> -->
+          <!-- <small>{{ site.tagline }}</small> -->
 		  <a href="/" title="Home">{{ site.title }}</a>
 
 		  {% for page in site.pages_list %}
@@ -22,6 +22,7 @@
 
       <main>
         {{ content }}
+		{% include comments.html %}
       </main>
 
       <footer class="footer">
