--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,11 @@
   <!-- MathJax -->
   <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
-    "HTML-CSS": { linebreaks: { automatic: true } },
-           SVG: { linebreaks: { automatic: true } }
+    HTML-CSS: { linebreaks: { automatic: true } },
+    SVG: { linebreaks: { automatic: true } }
+    inlineMath: [["$","$"],["\\\\(","\\\\)"]], 
+    displayMath: [["$$","$$"],["\\[","\\]"]], 
+    processEscapes: true 
   });
   </script>
   <script type="text/javascript"
