--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,9 +29,11 @@
   MathJax.Hub.Config({
     HTML-CSS: { linebreaks: { automatic: true } },
     SVG: { linebreaks: { automatic: true } }
-    inlineMath: [["$","$"],["\\\\(","\\\\)"]], 
-    displayMath: [["$$","$$"],["\\[","\\]"]], 
-    processEscapes: true 
+	tex2jax: {
+	    inlineMath: [["$","$"],["\\\\(","\\\\)"]], 
+	    displayMath: [["$$","$$"],["\\[","\\]"]], 
+	    processEscapes: true
+	} 
   });
   </script>
   <script type="text/javascript"
