--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   
   <!-- MathJax -->
     <script type="text/javascript"
-            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default">
     </script> 
 
 </head>
