add images and extend Fourier post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,8 @@
       displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
       processEscapes: true
     },
-    "HTML-CSS": { availableFonts: ["TeX"] }
+    "HTML-CSS": { availableFonts: ["TeX"] },
+	TeX: { equationNumbers: { autoNumber: "AMS" } }
   });
 </script>
     <script type="text/javascript"
