new post and eqn referencing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,10 @@
       processEscapes: true
     },
     "HTML-CSS": { availableFonts: ["TeX"] },
-	TeX: { equationNumbers: { autoNumber: "AMS" } }
+	TeX: { 
+		equationNumbers: { autoNumber: "AMS" } ,
+		extensions: ["AMSmath.js"]
+	}
   });
 </script>
     <script type="text/javascript"
