--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,9 +36,8 @@
     },
     "HTML-CSS": { availableFonts: ["TeX"] },
 	TeX: { 
-		equationNumbers: { autoNumber: "AMS" } ,
-		extensions: ["AMSmath.js"]
-	}
+		equationNumbers: { autoNumber: "AMS" }
+		}
   });
 </script>
     <script type="text/javascript"
